--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tui-rain-cli"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 authors = ["tschinz"]
 categories = ["cli", "command-line-utilities"]
@@ -10,6 +10,7 @@ keywords = ["cli", "terminal", "rain", "effect"]
 clap = { version = "4.5.23", features = ["env", "derive"] }
 crossterm = { version = "0.28.1", features = ["event-stream"] }
 futures = "0.3.31"
+rand = "0.8.5"
+rand_pcg = "0.3.1"
 ratatui = "0.29.0"
 tokio = { version = "1.41.1", features = ["full"] }
-tui-rain = "1.0.1"
